FO: Fix password button color on Firefox

--- a/themes/classic/_dev/css/components/checkout.scss
+++ b/themes/classic/_dev/css/components/checkout.scss
@@ -11,6 +11,9 @@ body#checkout {
       width: auto;
     }
   }
+  [data-action="show-password"]{
+    background: $gray-dark;
+  }
   .custom-checkbox {
     @include display(flex);
     span {
